<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!--
     <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">

          <Button
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/changeLanguage"
              android:singleLine="true"
              android:id="@+id/changeLanguage"/>

          </LinearLayout>
     -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/initDevice"
            android:singleLine="true"
            android:id="@+id/initDevice"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/connDevice"
            android:singleLine="true"
            android:id="@+id/connDevice"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/disconnDevice"
            android:singleLine="true"
            android:id="@+id/disconnDevice"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/isConnected"
            android:singleLine="true"
            android:id="@+id/isConnected"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/getSN"
            android:singleLine="true"
            android:id="@+id/getSN"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/getCSN"
            android:singleLine="true"
            android:id="@+id/getCSN"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/deviceInformation"
            android:singleLine="true"
            android:id="@+id/getSubApplicationInfo"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/getVersion"
            android:singleLine="true"
            android:id="@+id/getVersion"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:singleLine="true"
            android:id="@+id/cancel"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/upgrade"
            android:singleLine="true"
            android:id="@+id/upgrade"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/updateWorkingKey"
            android:singleLine="true"
            android:id="@+id/updateWorkingKey"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/readCard"
            android:singleLine="true"
            android:id="@+id/readCard"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/pleaseEnterPassword"
            android:singleLine="true"
            android:id="@+id/inputpwd" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/encryptPassword"
            android:singleLine="true"
            android:id="@+id/getPinBlock"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ICTradeResponse"
            android:singleLine="true"
            android:id="@+id/ICTradeResponse"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/confirmTransaction"
            android:singleLine="true"
            android:id="@+id/confirmTransaction"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/getMac"
            android:singleLine="true"
            android:id="@+id/getMac"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/uploadEmvConfig"
            android:layout_weight="1"
            android:singleLine="true"
            android:id="@+id/uploadEmvConfig"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/getEmvConfig"
            android:layout_weight="1"
            android:singleLine="true"
            android:id="@+id/getEmvConfig"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/uploadEmvTime"
            android:layout_weight="1"
            android:singleLine="true"
            android:id="@+id/uploadEmvTime"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/updateAID"
            android:layout_weight="1"
            android:singleLine="true"
            android:id="@+id/updateAID"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/getcv"
            android:layout_weight="1"
            android:singleLine="true"
            android:id="@+id/getcv"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/updateRID"
            android:layout_weight="1"
            android:singleLine="true"
            android:id="@+id/updateRID"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/showLCD"
            android:layout_weight="1"
            android:singleLine="true"
            android:id="@+id/showLCD"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clearLCD"
            android:layout_weight="1"
            android:singleLine="true"
            android:id="@+id/clearLCD"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setTime"
            android:layout_weight="1"
            android:singleLine="true"
            android:id="@+id/setTime"/>

    </LinearLayout><LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <Button
        android:id="@+id/openChannel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:singleLine="true"
        android:text="@string/openChannel" />

    <Button
        android:id="@+id/transCommand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:singleLine="true"
        android:text="@string/transCommand" />

    <Button
        android:id="@+id/closeChannel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:singleLine="true"
        android:text="@string/closeChannel" />
</LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/showStatus"/>
    </ScrollView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/showResult"/>
    </ScrollView>

</LinearLayout>
